--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap");
 html,
 body {
   padding: 0;
@@ -20,5 +21,5 @@ a {
 }
 
 .list-barn {
-  width: 300px;
+  width: 100%;
 }
