--- a/pages/telling/button.module.css
+++ b/pages/telling/button.module.css
@@ -25,3 +25,17 @@
   transform: translateY(2px);
   border-radius: 70%;
 }
+
+.regretBtn {
+  background-color: #ff2b20;
+  color: rgb(102, 2, 2);
+  border: solid 2px #ffffff;
+  padding: 5px;
+  font-size: 21px;
+  height: 50px;
+  width: 50px;
+  box-shadow: 0 2px 4px darkslategray;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  border-radius: 70%;
+}
