--- a/pages/telling/button.module.css
+++ b/pages/telling/button.module.css
@@ -6,7 +6,7 @@
   font-size: 31px;
   height: 100px;
   width: 100px;
-  box-shadow: 0 2px 4px darkslategray;
+  box-shadow: 0 2px 4px rgb(45, 45, 45);
   cursor: pointer;
   transition: all 0.2s ease;
   border-radius: 70%;
@@ -14,14 +14,14 @@
 
 .customBtn:active {
   background-color: #aaaaaa;
-  box-shadow: 0 0 2px darkslategray;
+  box-shadow: 0 0 2px rgb(45, 45, 45);
   transform: translateY(2px);
   border-radius: 70%;
 }
 
 .btnCounted {
   background-color: #aaaaaa;
-  box-shadow: 0 0 2px darkslategray;
+  box-shadow: 0 0 2px rgb(45, 45, 45);
   transform: translateY(2px);
   border-radius: 70%;
 }
@@ -34,7 +34,7 @@
   font-size: 21px;
   height: 50px;
   width: 50px;
-  box-shadow: 0 2px 4px darkslategray;
+  box-shadow: 0 2px 4px rgb(0, 0, 0);
   cursor: pointer;
   transition: all 0.2s ease;
   border-radius: 70%;
