--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: rgb(121, 246, 133);
-  background: radial-gradient(
-    circle,
-    rgba(121, 246, 133, 1) 0%,
-    rgba(244, 245, 235, 1) 100%
-  );
+  background-color: #f8f9fa;
 }
 
 a {
@@ -39,6 +34,9 @@ a {
 */
 }
 
+.main__header {
+  margin-top: 96px;
+}
 .btnLogi {
   background-color: rgb(133, 22, 22);
 }
