--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f8f9fa;
+  background-color: rgb(220, 236, 250);
 }
 
 a {
@@ -37,11 +37,43 @@ a {
 .main__header {
   margin-top: 96px;
 }
-.btnLogi {
-  background-color: rgb(133, 22, 22);
-}
 
 .user__login {
   display: flex;
   justify-content: flex-end;
+}
+
+/**********/
+/* Background image */
+/**********/
+
+.bg-img {
+  position: relative;
+
+  background-image: url("../img/hero.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  /* background-attachment: fixed; */
+  height: 80vh;
+}
+
+.bg-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 80vh;
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20;
 }
