--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #d3d3d3;
+  background-color: #ebfafb;
 }
 
 a {
@@ -49,11 +49,12 @@ a {
 
 .bg-img {
   position: relative;
-
-  background-image: url("../img/pattern.jpg");
-  background-size: cover;
+  color: #ebfafb;
+  background-image: url("../img/hero.webp");
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
+  background-color: #ebfafb;
   /* background-attachment: fixed; */
   height: 90vh;
 }
