--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
+/* Colors: 
+
+Cyan: #66d9e8  #ebfafb #3bc9db
+Tints: #f0fbfd 
+Shade: #0a1617 #142b2e #1f4146
+
+
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap");
 html,
 body {
@@ -5,7 +14,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #ebfafb;
+  /* background-color: #ebfafb; */
 }
 
 a {
@@ -34,6 +43,9 @@ a {
 */
 }
 
+.telle--lista--heading1 {
+  color: #0a1617;
+}
 .main__header {
   margin-top: 96px;
 }
@@ -48,15 +60,16 @@ a {
 /**********/
 
 .bg-img {
-  position: relative;
+  position: absolute;
   color: #ebfafb;
-  background-image: url("../img/hero.webp");
-  background-size: contain;
+  background-image: url("../img/oceanBg.webp");
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   background-color: #ebfafb;
   /* background-attachment: fixed; */
-  height: 90vh;
+  height: 100vh;
+  z-index: -10;
 }
 
 .bg-overlay {
@@ -96,7 +109,7 @@ a {
 /******************/
 
 .customBtn {
-  background-color: #48e055;
+  background-color: #8ce99a;
   color: rgb(39, 102, 41);
   border: solid 2px #276629;
   padding: 5px;
@@ -110,14 +123,14 @@ a {
 }
 
 .customBtn:active {
-  background-color: #aaaaaa;
+  background-color: #f0fbfd;
   box-shadow: 0 0 2px rgb(45, 45, 45);
   transform: translateY(2px);
   border-radius: 70%;
 }
 
 .btnCounted {
-  background-color: #aaaaaa;
+  background-color: #f0fbfd;
   box-shadow: 0 0 2px rgb(45, 45, 45);
   transform: translateY(2px);
   border-radius: 70%;
@@ -135,4 +148,10 @@ a {
   cursor: pointer;
   transition: all 0.2s ease;
   border-radius: 70%;
+}
+
+footer {
+  font-size: 18px;
+  color: #f0fbfd;
+  height: 35px;
 }
