--- a/styles/global.css
+++ b/styles/global.css
@@ -64,57 +64,6 @@ a {
 /* Background image */
 /**********/
 
-.bg-img {
-  position: absolute;
-  color: #ebfafb;
-  background-image: url("../img/oceanBg.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: #ebfafb;
-  /* background-attachment: fixed; */
-  height: 100vh;
-  z-index: -10;
-}
-.bg-color {
-  position: absolute;
-  background-color: #142b2e;
-}
-.bg-gradient {
-  position: absolute;
-  height: 100vh;
-
-  background: rgb(5, 68, 76);
-  background: linear-gradient(
-    0deg,
-    rgba(5, 68, 76, 1) 0%,
-    rgba(2, 168, 207, 0.6026785714285714) 100%,
-    rgba(4, 125, 153, 1) 100%
-  );
-  z-index: 1000;
-}
-.bg-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.1);
-  height: 90vh;
-  z-index: 10;
-}
-.bg {
-  z-index: -10000;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 20;
-}
-
 /**********/
 /* Utility classes */
 /**********/
@@ -127,6 +76,21 @@ a {
   margin: 5px;
 }
 
+.spinner {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 9px solid;
+  border-color: #dbdcef;
+  border-right-color: #075985;
+  animation: spinner-d3wgkg 1s infinite linear;
+}
+
+@keyframes spinner-d3wgkg {
+  to {
+    transform: rotate(1turn);
+  }
+}
 /******************/
 /*Buttons*/
 /******************/
